--- a/_quarto.yml
+++ b/_quarto.yml
@@ -66,6 +66,8 @@ website:
         contents:
           - href: labs/lab-1.qmd
             text: "Lab 1"
+          - href: labs/lab-2.qmd
+            text: "Lab 2"  
       # - section: "Material suplementario"
       #   contents:
           # - href: supplemental/slr-derivations.qmd
